implementing firsts endpoints
