# src/main/java/com/picbank/userservice/domain/model/UserPreferences.java
@@ -1,33 +1,19 @@
 package com.picbank.userservice.domain.model;
 
-import jakarta.persistence.*;
-import lombok.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 
-@Entity
-@Table(name = "user_preferences")
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
 @Builder
 public class UserPreferences {
 
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
-
-    @OneToOne
-    @JoinColumn(name = "user_id", nullable = false)
     private User user;
-
-    @Enumerated(EnumType.STRING)
-    @Column(nullable = false)
     private Language language;
-
-    @Enumerated(EnumType.STRING)
-    @Column(nullable = false)
     private Theme theme;
-
-    @Enumerated(EnumType.STRING)
-    @Column(nullable = false)
     private FontSize fontSize;
 }
